items fixed: added events for buttons and horizontal scroll element

--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -105,75 +105,134 @@ header {
   margin-left: 170px;
 }
 
-.wrap-items {
-  border: 2px solid red;
-  height: 29vh;
+///////////////////  event items /////////////////////////////
+.scroll{
+  height: 4px;
+  width: 92.5%;
+  margin: auto;
   position: relative;
-
-  /*   .items{
-    border: 2px solid rgb(117, 161, 66);
-    height: 100%;
-
-    display: flex;
-    align-items: center;
-
-  } */
-
-  .arrow {
+  background-color: rgba(247, 245, 245, 0.2);
+  
+  .scroll-thumb{
+    width: 150px;
+    background-color: rgba(247, 245, 245, 0.7);
     position: absolute;
-    top: 70px;
-    padding: 0;
-    background: #444;
-    border-radius: 15px;
-    border: 1px solid gray;
-    font-size: 24px;
-    line-height: 24px;
-    /*     color: #444; */
-    display: block;
-  }
-
-  .arrow:focus {
-    outline: none;
-  }
-
-  .arrow:hover {
-    background: #ccc;
-    cursor: pointer;
-  }
-
-  .prev {
-    left: 15px;
-  }
-
-  .next {
-    right: 15px;
-  }
-
-  .items {
-    border: 2px solid rgb(103, 149, 202);
-    width: 93%;
-    overflow: hidden;
-    margin: auto;
-
-    ul {
-      margin: 0;
-      padding: 0;
-      height: 190px;
-      width: 100%;
-      border: 2px solid rgb(103, 202, 103);
-      list-style: none;
-      transition: margin-left 250ms;
-    }
-
-    li {
-      display: inline-block;
-      border: 2px solid rgb(103, 202, 103);
-      height: 100%;
-      width: 345px;
-      margin: 0;
-    }
+    height: 4px;
+    transition: 1s;
   }
 }
+
+@mixin scrollbar($size, $primary, $secondary: lighten($primary, 25%)) {
+  ::-webkit-scrollbar {
+		width:  $size;
+		height: $size;
+	}
+
+	::-webkit-scrollbar-thumb {
+    border-radius: 30px;
+		background: rgb(199, 199, 199);
+	}
+
+	::-webkit-scrollbar-track {
+		background:rgba(202, 202, 202, 0.2);
+	}
+  
+  // For Internet Explorer
+  body {
+    scrollbar-face-color: $primary;
+    scrollbar-track-color: $secondary;
+  }
+}
+
+.wrap-items {
+  /*   border: 2px solid red; */
+    height: 29vh;
+    position: relative;
+    @include scrollbar(.5em, rgb(122, 118, 117));
+  
+    .arrow{
+      position: absolute;
+      top: 70px;
+      padding: 2px;
+      background: none;
+      border-radius: 15px;
+      border: 1.5px solid rgb(255, 255, 255);
+      font-size: 24px;
+      line-height: 40px;
+  /*     color: #444; */
+      display: block;
+    }
+  
+    .arrow:focus{
+      outline: none;
+    }
+  
+    .arrow:hover{
+      background: #ccc;
+      cursor:pointer;
+    }
+  
+    .prev{
+      right: 15px;
+      margin-top: -30px;
+    }
+  
+    .next{
+      right: 15px;
+      margin-top: 30px;
+    }
+  
+    .items{
+/*       border: 2px solid rgb(103, 149, 202); */
+      width: 93%;
+      height: 190px;
+      overflow: hidden;
+      margin: auto;
+  
+      ul{
+        margin: 0;
+        padding: 0;
+        height: 190px;
+  /*       border: 2px solid rgb(110, 50, 116); */
+        list-style: none;
+        font-size: 0;
+        margin-top: 0px;  ///this style changed
+        transition: 0.5s;
+      }
+  
+      li{
+        font-size: 15px;
+        display: inline-block;
+    /*     border: 1px solid rgb(103, 202, 103); */
+        height: 190px;
+        width: 348px;
+        margin: 0;
+        padding-left: 2px;
+        padding-right: 50px;
+      }
+  
+      .event-type{
+        border: 1px solid rgb(253, 253, 253);
+        height: 15%;
+        margin-top: 5%;
+      }
+  
+      .event-description{
+        border: 1px solid rgb(253, 253, 253);
+        height: 40%;
+        margin-top: 1%;
+      }
+  
+      .event-date{
+        border: 1px solid rgb(253, 253, 253);
+        height: 30%;
+        margin-top: 1%;
+      }
+  
+    }
+  }
+
+////////////////////////////////////////////
 
 .burger-icon {
   display: none;
